--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -15,6 +15,8 @@ dbm_core = { path = "../crates/dbm_core" }
 dbm_12_insula = { path = "../crates/dbm_12_insula" }
 dbm_13_hypothalamus = { path = "../crates/dbm_13_hypothalamus" }
 dbm_0_sn = { path = "../crates/dbm_0_sn" }
+dbm_7_lc = { path = "../crates/dbm_7_lc" }
+dbm_8_serotonin = { path = "../crates/dbm_8_serotonin" }
 
 [dev-dependencies]
 pvgs_client = { path = "../pvgs_client", features = ["local-pvgs"] }
