--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -19,6 +19,8 @@ dbm_7_lc = { path = "../crates/dbm_7_lc" }
 dbm_8_serotonin = { path = "../crates/dbm_8_serotonin" }
 dbm_9_amygdala = { path = "../crates/dbm_9_amygdala" }
 dbm_pag = { path = "../crates/dbm_pag" }
+dbm_stn = { path = "../crates/dbm_stn" }
+dbm_pmrf = { path = "../crates/dbm_pmrf" }
 
 [dev-dependencies]
 pvgs_client = { path = "../pvgs_client", features = ["local-pvgs"] }
