Add emotion field projection to engine

--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -24,6 +24,7 @@ dbm_pmrf = { path = "../crates/dbm_pmrf" }
 dbm_sc = { path = "../crates/dbm_sc" }
 dbm_pprf = { path = "../crates/dbm_pprf" }
 dbm_18_cerebellum = { path = "../crates/dbm_18_cerebellum" }
+emotion_field = { path = "../crates/emotion_field" }
 
 [dev-dependencies]
 pvgs_client = { path = "../pvgs_client", features = ["local-pvgs"] }
