--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ members = [
     "crates/microcircuit_hypothalamus_setpoint",
     "crates/microcircuit_sn_stub",
     "crates/microcircuit_sn_attractor",
+    "crates/microcircuit_sn_biophys",
     "crates/microcircuit_lc_stub",
     "crates/microcircuit_lc_spike",
     "crates/microcircuit_lc_biophys",
