--- a/crates/dbm_bus/Cargo.toml
+++ b/crates/dbm_bus/Cargo.toml
@@ -10,6 +10,7 @@ biophys = ["dbm_7_lc/biophys"]
 biophys-lc = ["dbm_7_lc/biophys-lc"]
 microcircuit-sn = ["dbm_0_sn/microcircuit-sn"]
 microcircuit-sn-attractor = ["dbm_0_sn/microcircuit-sn-attractor"]
+biophys-sn = ["dbm_0_sn/biophys-sn"]
 
 [dependencies]
 dbm_core = { path = "../dbm_core" }
