--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ members = [
     "crates/microcircuit_cerebellum_pop",
     "crates/microcircuit_pag_stub",
     "crates/microcircuit_pag_attractor",
+    "crates/microcircuit_pag_biophys",
     "crates/microcircuit_stn_stub",
     "crates/microcircuit_stn_hold",
     "crates/microcircuit_pmrf_stub",
