--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ members = [
     "crates/microcircuit_pag_biophys",
     "crates/microcircuit_stn_stub",
     "crates/microcircuit_stn_hold",
+    "crates/microcircuit_stn_biophys",
     "crates/microcircuit_pmrf_stub",
     "crates/microcircuit_pmrf_rhythm",
     "crates/microcircuit_sc_stub",
