--- a/crates/dbm_bus/Cargo.toml
+++ b/crates/dbm_bus/Cargo.toml
@@ -11,6 +11,7 @@ biophys-lc = ["dbm_7_lc/biophys-lc"]
 microcircuit-sn = ["dbm_0_sn/microcircuit-sn"]
 microcircuit-sn-attractor = ["dbm_0_sn/microcircuit-sn-attractor"]
 biophys-sn = ["dbm_0_sn/biophys-sn"]
+biophys-stn = ["dbm_stn/biophys-stn"]
 
 [dependencies]
 dbm_core = { path = "../dbm_core" }
