--- a/crates/dbm_9_amygdala/Cargo.toml
+++ b/crates/dbm_9_amygdala/Cargo.toml
@@ -9,6 +9,17 @@ path = "src/lib.rs"
 [features]
 microcircuit-amygdala-pop = ["dep:microcircuit_amygdala_pop"]
 biophys = []
+biophys-l4 = ["biophys"]
+biophys-l4-synapses = ["biophys-l4"]
+biophys-l4-modulation = [
+    "biophys-l4-synapses",
+    "microcircuit_amygdala_l4/biophys-l4-modulation",
+]
+biophys-l4-amygdala = [
+    "dep:microcircuit_amygdala_l4",
+    "microcircuit_amygdala_l4/biophys-l4-amygdala",
+    "biophys-l4-synapses",
+]
 biophys-amygdala = [
     "dep:microcircuit_amygdala_biophys",
     "microcircuit_amygdala_biophys/biophys",
@@ -20,6 +31,7 @@ dbm_core = { path = "../dbm_core" }
 microcircuit_amygdala_stub = { path = "../microcircuit_amygdala_stub" }
 microcircuit_amygdala_pop = { path = "../microcircuit_amygdala_pop", optional = true }
 microcircuit_amygdala_biophys = { path = "../microcircuit_amygdala_biophys", optional = true }
+microcircuit_amygdala_l4 = { path = "../microcircuit_amygdala_l4", optional = true }
 microcircuit_core = { path = "../microcircuit_core" }
 
 [dev-dependencies]
