Add deterministic L4 dendritic targeting

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,6 +79,7 @@ members = [
     "crates/biophys_synapses_l4",
     "crates/biophys_plasticity_l4",
     "crates/biophys_homeostasis_l4",
+    "crates/biophys_targeting_l4",
 ]
 resolver = "2"
 
