--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,6 +74,7 @@ members = [
     "crates/biophys_event_queue_l4",
     "crates/assets",
     "crates/asset_chunker",
+    "crates/asset_rehydration",
     "crates/pvgs",
     "crates/query",
     "crates/scorecards",
