Fix LC L4 CA wiring and determinism expectations

--- a/crates/microcircuit_lc_l4/Cargo.toml
+++ b/crates/microcircuit_lc_l4/Cargo.toml
@@ -14,6 +14,11 @@ biophys = [
     "biophys_morphology/biophys",
 ]
 biophys-l4 = ["biophys"]
+biophys-l4-ca = [
+    "biophys-l4",
+    "biophys_channels/biophys-l4-ca",
+    "biophys_compartmental_solver/biophys-l4-ca",
+]
 biophys-l4-lc = ["biophys-l4"]
 
 [dependencies]
