--- a/crates/dbm_bus/Cargo.toml
+++ b/crates/dbm_bus/Cargo.toml
@@ -6,10 +6,12 @@ edition = "2021"
 [features]
 microcircuit-lc = ["dbm_7_lc/microcircuit-lc"]
 microcircuit-lc-spike = ["dbm_7_lc/microcircuit-lc-spike"]
+microcircuit-serotonin-attractor = ["dbm_8_serotonin/microcircuit-serotonin-attractor"]
 biophys = ["dbm_7_lc/biophys"]
 biophys-lc = ["dbm_7_lc/biophys-lc"]
 microcircuit-sn = ["dbm_0_sn/microcircuit-sn"]
 microcircuit-sn-attractor = ["dbm_0_sn/microcircuit-sn-attractor"]
+microcircuit-insula-fusion = ["dbm_12_insula/microcircuit-insula-fusion"]
 biophys-sn = ["dbm_0_sn/biophys-sn"]
 biophys-l4-sn = ["dbm_0_sn/biophys-l4-sn"]
 biophys-l4-sn-assets = ["dbm_0_sn/biophys-l4-sn-assets"]
